# Voxel-Forge

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  dockerfile  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Reference_openMVG_software_files/: main_ComputeFeatures.cpp  main_ComputeMatches.cpp  main_GeometricFilter.cpp
src/: backend.cpp  backend.h  cubewidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  openmvg_wrappers.cpp  openmvg_wrappers.hpp  resources.qrc  stage1.cpp  stage2.cpp  stage3.cpp  stage4.cpp  temp2.cpp
src/old/: archive.cpp  main_old.cpp  temp3.cpp
temp/: main_SfMInit_ImageListing.cpp
